--- a/index.html
+++ b/index.html
@@ -28,14 +28,20 @@
         </header>
         <main>
             <section class="section-about">
-                <div class="u-center-text u-margin-bot-8">
+                <div class="u-center-text u-margin-bot-lg">
                     <h2 class="heading-secondary">
                         Exciting Tours for adventurous people
                     </h2>
                 </div>
                 <div class="row">
                     <div class="col-1-of-2">
-                        Text
+                        <h3 class="heading-tertiary u-margin-bot-sm">You're goint to fall in love with nature</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis ducimus ad dignissimos quas dolorum culpa minima amet?</p>
+                        </p>
+                        <h3 class="heading-tertiary u-margin-bot-sm">Live adventures like you never have before</h3>
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                        <a href="#" class="btn-text">Learn more &rarr;</a>
                     </div>
                     <div class="col-1-of-2">
                         Image
