--- a/index.html
+++ b/index.html
@@ -104,9 +104,25 @@
                     <div class="col-1-of-3">
                       <div class="card">
                           <div class="card__side card__side--front">
-                              Front
+                            <div class="card__picture card__picture--1">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading card__heading--1">
+                                <span class="card__heading-span card__heading-span--1">
+                                    the sea explorer
+                                </span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>3 day tour</li>
+                                    <li>Up to 30 People</li>
+                                    <li>2 tour guides</li>
+                                    <li>Sleep in cozy hotels</li>
+                                    <li>Difficulty: very easy</li>
+                                </ul>
+                            </div>
                           </div>
-                          <div class="card__side card__side--back card__side--back-1">
+                          <div class="card__side card__side--back card__side--back--1">
                             Back
                         </div>
                       </div>
@@ -114,7 +130,23 @@
                     <div class="col-1-of-3">
                         <div class="card">
                             <div class="card__side card__side--front">
-                                Front
+                                <div class="card__picture card__picture--2">
+                                    &nbsp;
+                                </div>
+                                <h4 class="card__heading card__heading--2">
+                                    <span class="card__heading-span card__heading-span--2">
+                                        the forest hiker
+                                    </span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>7 day tour</li>
+                                        <li>Up to 40 People</li>
+                                        <li>6 tour guides</li>
+                                        <li>Sleep in provided tents</li>
+                                        <li>Difficulty: medium</li>
+                                    </ul>
+                                </div>
                             </div>
                             <div class="card__side card__side--back card__side--back-2">
                               Back
@@ -124,7 +156,23 @@
                       <div class="col-1-of-3">
                         <div class="card">
                             <div class="card__side card__side--front">
-                                Front
+                                <div class="card__picture card__picture--3">
+                                    &nbsp;
+                                </div>
+                                <h4 class="card__heading card__heading--3">
+                                    <span class="card__heading-span card__heading-span--3">
+                                        the snow adventurer
+                                    </span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>5 day tour</li>
+                                        <li>Up to 15 People</li>
+                                        <li>3 tour guides</li>
+                                        <li>Sleep in provided tents</li>
+                                        <li>Difficulty: hard</li>
+                                    </ul>
+                                </div>
                             </div>
                             <div class="card__side card__side--back card__side--back-3">
                               Back
