--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             </div>
                             <h4 class="card__heading card__heading--1">
                                 <span class="card__heading-span card__heading-span--1">
-                                    the sea explorer
+                                    sea explorer
                                 </span>
                             </h4>
                             <div class="card__details">
@@ -122,8 +122,14 @@
                                 </ul>
                             </div>
                           </div>
-                          <div class="card__side card__side--back card__side--back--1">
-                            Back
+                          <div class="card__side card__side--back card__side--back-1">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">Only</p>
+                                    <p class="card__price-value">$297</p>
+                                </div>
+                                <a href="#" class="btn btn--white">Book now!</a>
+                            </div>
                         </div>
                       </div>
                     </div>
@@ -135,7 +141,7 @@
                                 </div>
                                 <h4 class="card__heading card__heading--2">
                                     <span class="card__heading-span card__heading-span--2">
-                                        the forest hiker
+                                        forest hiker
                                     </span>
                                 </h4>
                                 <div class="card__details">
@@ -149,7 +155,13 @@
                                 </div>
                             </div>
                             <div class="card__side card__side--back card__side--back-2">
-                              Back
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">Only</p>
+                                        <p class="card__price-value">$497</p>
+                                    </div>
+                                    <a href="#" class="btn btn--white">Book now!</a>
+                                </div>
                           </div>
                         </div>
                       </div>
@@ -161,7 +173,7 @@
                                 </div>
                                 <h4 class="card__heading card__heading--3">
                                     <span class="card__heading-span card__heading-span--3">
-                                        the snow adventurer
+                                        snow adventurer
                                     </span>
                                 </h4>
                                 <div class="card__details">
@@ -175,10 +187,19 @@
                                 </div>
                             </div>
                             <div class="card__side card__side--back card__side--back-3">
-                              Back
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">Only</p>
+                                        <p class="card__price-value">$897</p>
+                                    </div>
+                                    <a href="#" class="btn btn--white">Book now!</a>
+                                </div>
                           </div>
                         </div>
                       </div>
+                </div>
+                <div class="u-center-text u-margin-top-xlg">
+                    <a href="#" class="btn btn--green">Discover all tours</a>
                 </div>
             </section>
         </main>
