--- a/index.html
+++ b/index.html
@@ -202,6 +202,24 @@
                     <a href="#" class="btn btn--green">Discover all tours</a>
                 </div>
             </section>
+            <section class="section-stories">
+                <div class="u-center-text u-margin-bot-lg">
+                    <h2 class="heading-secondary">
+                        We make people genuinely happy!
+                    </h2>
+                </div>
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bot-sm">I had the best week ever with my family!</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.  Culpa, eveniet vel. Quia maxime praesentium dolor! Repellat ea ipsam veniam, magni temporibus officiis reiciendis veritatis suscipit molestias velit assumenda neque molestiae.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
