created css popup

--- a/index.html
+++ b/index.html
@@ -324,5 +324,22 @@
                 </div>
             </div>
         </footer>
+        <div class="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img src="img/nat-8.jpg" alt="Tour Photo" class="popup__img">
+                    <img src="img/nat-9.jpg" alt="Tour Photo" class="popup__img">
+                </div>
+                <div class="popup__right">
+                    <h2 class="heading-secondary u-margin-bot-sm">Start Booking Now</h2>
+                    <h3 class="heading-tertiary u-margin-bot-sm">Important &ndash; Please read the terms before booking</h3>
+                    <p class="popup__text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ipsum explicabo in quaerat aliquam vitae unde dicta. Commodi deleniti explicabo nostrum qui id, ullam illo architecto molestiae illum in beatae?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ipsa amet eligendi maxime fuga labore est veniam quos ut expedita! Saepe, veniam. Accusamus dolorum quae quis deleniti animi officiis fugit.
+                    </p>
+                    <a href="#" class="btn btn--green">Book Now</a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
