--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$297</p>
                                 </div>
-                                <a href="#" class="btn btn--white">Book now!</a>
+                                <a href="#popup" class="btn btn--white">Book now!</a>
                             </div>
                         </div>
                       </div>
@@ -176,7 +176,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$497</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                           </div>
                         </div>
@@ -208,7 +208,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$897</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                           </div>
                         </div>
@@ -324,13 +324,14 @@
                 </div>
             </div>
         </footer>
-        <div class="popup">
+        <div class="popup" id="popup">
             <div class="popup__content">
                 <div class="popup__left">
                     <img src="img/nat-8.jpg" alt="Tour Photo" class="popup__img">
                     <img src="img/nat-9.jpg" alt="Tour Photo" class="popup__img">
                 </div>
                 <div class="popup__right">
+                    <a href="#section-tours" class="popup__close">&times;</a>
                     <h2 class="heading-secondary u-margin-bot-sm">Start Booking Now</h2>
                     <h3 class="heading-tertiary u-margin-bot-sm">Important &ndash; Please read the terms before booking</h3>
                     <p class="popup__text">
